Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 .App {
@@ -81,6 +81,9 @@ html {
     font-size: 1.2em !important;
   }
   .Project-screenshot, .Project-image {
+    display: none !important;
+  }
+  .Circle {
     display: none !important;
   }
 }
@@ -201,7 +204,7 @@ html {
 
 .Skills {
   margin: 0 0 3em 0;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   border-radius: 1em;
   display: flex;
   flex-direction: column;
@@ -214,7 +217,7 @@ html {
 }
 
 .Skills-title {
-  margin: 0.5em 0 0.5em 0;
+  margin: 0em 0 0.5em 0;
   font-size: x-large;
   font-weight: bold;
 }
@@ -377,6 +380,6 @@ html {
   transition: all 0.7s ease;
 }
 
-.Project-screenshot:hover, .Project-image:hover, .Job:hover, .Skills:hover {
+.Project-screenshot-main:hover, .Project-screenshot:hover, .Project-image-main:hover, .Project-image:hover, .Job:hover, .Skills:hover {
   transform: scale(1.1) perspective(1em);
 }
